# chess_rag

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
data/: chess_data.py
interfaces/: streamlit_app.py
models/: chess_game.py
services/: document_service.py  rag_service.py
utils/: display.py  prompt_templates.py
